# cv-bastien-gallay

./: .gitignore  .markdownlint.json  CLAUDE.md  GIT_WORKFLOW.md  IDEAS.md  README.md  VERIFICATION.md  justfile  pyproject.toml
.claude/commands/: README.md  analyze-source.md  task-complete.md  task-create.md  task-from-analysis.md  task-from-idea.md  task-start.md
.tasks/: ANALYSES.md  IDEAS.md  TASKS.md  TASK_RULES.md
.tasks/.archived/: CNT-009-ajouter-experience-dekra.md  CNT-010-ajouter-section-benevolat.md  CNT-012-corriger-ecarts-mineurs-cast.md  CNT-016-enrichir-section-experience-detaillee-avec-descriptions-developpees.md  CNT-019-ajouter-projets-clients-et-resultats-business-palo-it-cto.md  CNT-020-ajouter-activite-presales-et-business-development-palo-it-cto.md  CNT-022-ajouter-initiatives-innovation-et-formation-palo-it-cto.md  CNT-027-ajouter-missions-clients-upwiser-manquantes.md  CNT-028-ajouter-activites-communautaires-rayonnement.md  CNT-030-ajouter-experiences-recentes-betagouv-nalo.md  CNT-031-enrichir-experience-palo-it-cto-complete.md  CNT-032-moderniser-entete-cv.md  CNT-033-ameliorer-section-a-propos.md  CNT-035-ajouter-mission-fircosoft.md  CNT-036-condensation-impact-business.md  CNT-037-optimisation-version-courte.md  DOC-002-guide-optimisation-linkedin.md  INF-001-mcp-integration.md  INF-004-migrer-systeme-gestion-taches-vers-skill-claude-unifie.md  INF-006-extraire-scripts-tests-hors-claude.md  INF-009-skill-analyse-offre-emploi.md  LAY-001-sidebar-premiere-page-uniquement.md  LAY-003-reorganiser-competences-3-poles.md  QUA-001-verification.md  (+3 more)
TASKS/: DOC-001-task-management-automation.md  INF-002-restructurer-sources-pdf-documentation.md
data/: .gitignore
docs/: WEEKLY_REPORTS.md
posts/: 2026-01-16-proto-assistant-rédaction.md  2026-01-17-metriques-texte-nlp.md  post-LLM-SDD-TDD-Craft.md
resources/: README.md  linkedin-optimization-guide.md
scripts/: list_priority_recommendations.py  priority_weight.py  update_priority_scores.py  verify-all.sh  verify-build.sh  verify-dates.sh  verify-format.sh
src/: cv-data.typ  cv-short.typ  cv.typ  neat-cv-local.typ
(+266 files in other folders)
