[project]
name = "neat-cv"
version = "1.0.0"
description = "CV project written in Typst with verification tools"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
reports = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.scripts]
generate-cfd = "scripts.reports.generate_cfd:main"

[tool.pytest.ini_options]
testpaths = [
    "scripts/verification/tests",
    "scripts/task_management/tests",
    "scripts/reports/tests",
]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
